--- a/index.html
+++ b/index.html
@@ -91,12 +91,53 @@
             width: 0;
             transform-origin: left center;
         }
+        .game-wrapper {
+            display: flex;
+            align-items: flex-start;
+            gap: 20px;
+        }
+        .difficulty-bar {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            padding: 10px;
+            background-color: #f0f0f0;
+            border-radius: 10px;
+        }
+        .difficulty-bar h3 {
+            margin-bottom: 10px;
+        }
+        .difficulty-btn {
+            width: 100%;
+            padding: 10px;
+            margin: 5px 0;
+            border: none;
+            background-color: #e0e0e0;
+            cursor: pointer;
+            transition: background-color 0.3s ease;
+            border-radius: 5px;
+        }
+        .difficulty-btn:hover {
+            background-color: #d0d0d0;
+        }
+        .difficulty-btn.active {
+            background-color: #4CAF50;
+            color: white;
+        }
     </style>
 </head>
 <body>
     <div class="game-container">
         <h1>Tic Tac Toe vs AI</h1>
-        <div class="board" id="board"></div>
+        <div class="game-wrapper">
+            <div class="difficulty-bar">
+                <h3>AI Difficulty</h3>
+                <button class="difficulty-btn active" data-difficulty="easy">Easy</button>
+                <button class="difficulty-btn" data-difficulty="medium">Medium</button>
+                <button class="difficulty-btn" data-difficulty="hard">Hard</button>
+            </div>
+            <div class="board" id="board"></div>
+        </div>
         <div id="status"></div>
         <button id="resetBtn">New Game</button>
     </div>
