--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
         }
         .game-wrapper {
             display: flex;
-            align-items: flex-start;
+            align-items: center; /* Changed from flex-start to center */
             gap: 20px;
         }
         .difficulty-bar {
@@ -103,6 +103,7 @@
             padding: 10px;
             background-color: #f0f0f0;
             border-radius: 10px;
+            align-self: center; /* Added to center the difficulty bar vertically */
         }
         .difficulty-bar h3 {
             margin-bottom: 10px;
